--- a/config/database.yml.template
+++ b/config/database.yml.template
@@ -7,6 +7,7 @@ development:
   pool: 5
   username: ${DATABASE_USERNAME}
   password:
+  url: ${DATABASE_URL}
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -17,6 +18,7 @@ test:
   database: ${TEST_DATABASE}
   pool: 5
   username: ${DATABASE_USERNAME}
+  url: ${DATABASE_URL}
 
 production:
   adapter: postgresql
@@ -25,4 +27,4 @@ production:
   pool: 5
   username: ${DATABASE_USERNAME}
   password:
-
+  url: ${DATABASE_URL}
