--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,7 @@ jobs:
 
       - run: bundle exec rake db:test:load
       - run: bundle exec rspec
+
+      - uses: coverallsapp/github-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
