--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: '2.4.10'
           bundler-cache: true
 
       - run: bash script/install/config.bash --defaults
