Update GitHub Actions workflow to run on ubuntu-latest
It was previously running on ubuntu-20.04, but that is deprecated
and will soon be fully unsupported [1]. Note that we must now
install imagemagick before running setup-ruby, as it is no longer
preinstalled in the current ubuntu-latest (ubuntu-24.04) image [2].

[1] https://www.github.com/actions/runner-images/issues/11101
[2] https://github.com/actions/runner-images/blob/releases/ubuntu24/20250316/images/ubuntu/Ubuntu2404-Readme.md

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 on: [push, pull_request]
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres:11-alpine
@@ -31,6 +31,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - run: sudo apt-get install imagemagick libmagickwand-dev # required by the RMagick gem
+
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
@@ -68,9 +71,12 @@ jobs:
       - uses: coverallsapp/github-action@v2
 
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - run: sudo apt-get install imagemagick libmagickwand-dev # required by the RMagick gem
+
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
