--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 on: [push, pull_request]
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     services:
       postgres:
         image: postgres:11-alpine
@@ -34,6 +34,9 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '2.7' # required by pygments.rb < 2.0.0
 
       - run: bash script/install/config.bash --defaults
         env:
@@ -68,7 +71,7 @@ jobs:
       - uses: coverallsapp/github-action@v2
 
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
